<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Conteos</string>
    <string name="configuracion">Configuración</string>
    <string name="acerca_de">Acerca de</string>
    <string name="title_activity_time_picker">TimePickerActivity</string>
    <string name="seleccion_hora">Seleccionar Hora Inicial de Conteo</string>
    <string name="botonCancelar">Cancelar</string>
    <string name="botonGuardarHora">Guardar Hora</string>
    <string name="btnInicio">Iniciar</string>
    <string name="btnFin">Finalizar</string>
    <string name="camion3Text">Camion 3 ejes</string>
    <string name="camion2Text">Camion 2 ejes</string>
    <string name="motoText">Moto</string>
    <string name="colectivoText">Colectivo</string>
    <string name="camionetaText">Camioneta</string>
    <string name="autoText">Automovil</string>
    <string name="title_activity_modos_transporte">ModosTransporteActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_conexion_web_service_conteos">ConexionWebServiceConteos</string>
    <string name="title_activity_acerca_de">AcercaDeActivity</string>

</resources>
