<?xml version="1.0" encoding="utf-8"?>
<LinearLayout 
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@drawable/borde" >

        <Button
            android:id="@+id/buttonAuto"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="25dp"
            android:onClick="contarVehiculo"
            android:text="@string/autoText"
            android:textSize="15px"
            android:drawableBottom="@drawable/auto" />

        <Button
            android:id="@+id/buttonCamioneta"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:layout_marginTop="25dp"
            android:onClick="contarVehiculo"
            android:text="@string/camionetaText"
            android:textSize="15px"
            android:drawableBottom="@drawable/camioneta" />

        <Button
            android:id="@+id/buttonColectivo"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="100dp"
            android:onClick="contarVehiculo"
            android:text="@string/colectivoText"
            android:textSize="15px"
            android:drawableBottom="@drawable/colectivo" />

        <Button
            android:id="@+id/buttonMoto"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginRight="40dp"
            android:layout_marginTop="100dp"
            android:onClick="contarVehiculo"
            android:text="@string/motoText"
            android:textSize="15px"
            android:drawableBottom="@drawable/moto" />

        <Button
            android:id="@+id/buttonCamion3"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/buttonCamion2"
            android:layout_alignBottom="@+id/buttonCamion2"
            android:layout_alignRight="@+id/buttonMoto"
            android:drawableBottom="@drawable/camion3"
            android:onClick="contarVehiculo"
            android:text="@string/camion3Text"
            android:textSize="15px" />

        <Button
            android:id="@+id/button7"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_alignLeft="@+id/buttonCamion2"
            android:layout_below="@+id/buttonCamion2"
            android:layout_marginTop="20dp"
            android:onClick="contarVehiculo"
            android:text="Vehiculo" />

        <Button
            android:id="@+id/button8"
            android:layout_width="100dp"
            android:layout_height="48dp"
            android:layout_alignBaseline="@+id/button7"
            android:layout_alignBottom="@+id/button7"
            android:layout_alignLeft="@+id/buttonCamioneta"
            android:onClick="contarVehiculo"
            android:text="Vehiculo" />

        <Button
            android:id="@+id/buttonCamion2"
            android:layout_width="115dp"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/buttonColectivo"
            android:layout_below="@+id/buttonMoto"
            android:drawableBottom="@drawable/camion2"
            android:onClick="contarVehiculo"
            android:text="@string/camion2Text"
            android:textSize="15px" />

    </RelativeLayout>
    
</LinearLayout>